4th attempt to fix overflow-x

--- a/app.css
+++ b/app.css
@@ -1,9 +1,16 @@
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     background: #CF5C36;
     font-family: "Nunito", sans-serif;
-    overflow-x: hidden;
-    position: relative;
-    width: 100%;
+    /* position: relative; */
+    /* margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0; */
+    /* width: 100%; */
 }
 
 .navbar-brand span {
